crates/backyard-lexer/tests/snapshots/number__basic.snap
---
source: crates/backyard-lexer/tests/number.rs
expression: tokens
snapshot_kind: text
---
- token_type: Number
  value:
    - 54
    - 55
  line: 1
  column: 0
  offset: 0
