crates/backyard-lexer/tests/snapshots/number__hex.snap
---
source: crates/backyard-lexer/tests/number.rs
assertion_line: 24
expression: tokens
snapshot_kind: text
---
- token_type: NumberHex
  value: "0xff9abc"
  line: 1
  column: 0
  offset: 0
